<resources>
    <string name="app_name">HeartRate</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="calculate">CALCULATE</string>
    <string name="history">HISTORY</string>
    <string name="place_finger">Place finger on your camera</string>
    <string name="press_start">Press start to check your heart rate</string>
    <string name="bpm">bpm</string>
    <string name="how_it_works">How it works</string>
    <string name="default_bpm">000</string>
    <string name="BPM">BPM</string>
    <string name="ok_">OKay</string>
    <string name="measure_title">Measure your Heart Rate</string>
    <string name="measure_hint">Lightly place your index finger over the camera lens on back of your phone. Make sure the camera lens are fully covered.</string>
    <string name="image">image</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="your_heart_rate">Your Heart Rate</string>
    <string name="try_again">Try Again</string>
    <string name="fail">Your pulse is not detected properly please attach your finger gently don\'t press too hard, try again.</string>
    <string name="failed">Failed</string>
    <string name="action_help">Help</string>
    <string name="check_your_heart_rate">Check your heart rate</string>
    <string name="no_saved_heart_rate_found_yet">No Saved heart rate found yet</string>
</resources>
